fixed login form to align better and gave bootstrapped styling.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -31,6 +31,11 @@
     display: inline;
 }
 
+#login-header {
+    text-align: center;
+}
+
+
 #createSpotHeading {
     text-align: center;
    
